files/envoy-gateway.yaml
#### cluster Scope, not use namespace 
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: gateway-gw
    namespace: envoy-gateway-system    
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-gw
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: envoy01     
spec:
  gatewayClassName: gateway-gw
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      hostname: longtumlab.com
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
#          - name: s3gw1-tls  # manual cert 
#            kind: Secret     # manual cert
#        - group: cert-manager.io
#          kind: Certificate
#          name: auto-tls            
        - kind: Secret
          name: auto-tls          
#      allowedRoutes:
#        namespaces:
#          from: Selector
#          selector:
#            matchLabels:
#              gateway: "gateway-gw"          
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app
  namespace: default
  annotations:
    cert-manager.io/issuer: envoy01
spec:
  hostnames:
    - app.example.com
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app
      port: 80
