files/lab-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-ingress
  namespace: lab-ingress
  labels:
    app: my1stdeployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: my1stdeployment
  template:
    metadata:
      labels:
        app: my1stdeployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - my1stdeployment
            topologyKey: kubernetes.io/hostname      
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"       
      containers:
      - image: registry-kubly.olsdemo.com/k8s101private/brian-myapp:v1
        name: brian
        ports:
        - containerPort: 80
          name: my1stdeployment
          protocol: TCP
#        resources:
#          requests:
#            memory: "32Mi"
#            cpu: "200m"
#          limits:
#            memory: "64Mi"
#            cpu: "250m"
#        volumeMounts:
#        - mountPath: "/vol-01"
#          name: pvc-vol-01
#        volumeMounts:
#        - name: host-path
#          mountPath: /usr/share/nginx/html
      imagePullSecrets:
      - name: my-registry 
#      volumes:
#      - name: pvc-vol-01
#        persistentVolumeClaim:
#          claimName: gluster-pvc
#      volumes:
#      - name: host-path
#        hostPath:
#          path: /home/user01/vol-01
#      nodeSelector:
#        kubernetes.io/hostname: ols-milky-k8s-worker-01
---
apiVersion: v1
kind: Service
metadata:
  name: lab-ingress
  namespace: lab-ingress
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: my1stdeployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: lab-ingress
  annotations:
    cert-manager.io/cluster-issuer: certmanager01
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: traefik 
  tls:
  - hosts:
      - lab-ingress.milkyk8s.longtumlab.com
    secretName: lab-ingress-cert
  rules:
  - host: lab-ingress.milkyk8s.longtumlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab-ingress
            port:
              number: 80
